add google analytics

--- a/about.html
+++ b/about.html
@@ -33,6 +33,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="./style/main.css" />
     <script type="module" src="./scripts/main.js"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-115956895-3"
+    ></script>
+    <script src="./scripts/google-analytics.js"></script>
     <title>Kanye Quotes</title>
   </head>
   <body>
