--- a/about.html
+++ b/about.html
@@ -19,7 +19,10 @@
       href="assets/favicon/favicon-16x16.png"
     />
     <meta property="og:title" content="Generate Kanye West Quotes" />
-    <meta property="og:image" content="assets/screenshot.png" />
+    <meta
+      property="og:image"
+      content="http://www.kanye.fun/assets/screenshot.png"
+    />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
     <meta name="author" content="Allison Colyer" />
